<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="48dp">

    <!-- Título -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvtitulo"
        android:textSize="32sp"
        android:textStyle="bold" />

    <!-- Campos de texto -->
    <EditText
        android:id="@+id/etDocumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:minHeight="48dp"
        android:hint="@string/etdocumento"
        android:digits="0123456789"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvDocumentoInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/documento_info"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/etNombres"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/etnombres"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etApellidos"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/etapellidos"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/etusuario"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:minHeight="48dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/etContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:minHeight="48dp"
        android:maxLength="8"
        android:hint="@string/etcontra"
        android:inputType="textPassword" />

    <!-- Botones -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Primer TableRow para los dos primeros botones -->
            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/btnregistrar" />

        <!-- Segundo TableRow para los dos siguientes botones -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnListar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:text="@string/btnlistarRegistros" />

            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_height="wrap_content"
                android:text="@string/btnLimpiar" />
        </TableRow>
    </TableLayout>

</LinearLayout>
